Support File responses for Kotlin client

--- a/modules/openapi-generator/src/main/resources/kotlin-client/libraries/jvm-okhttp/infrastructure/ApiClient.kt.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-client/libraries/jvm-okhttp/infrastructure/ApiClient.kt.mustache
@@ -168,6 +168,15 @@ import org.threeten.bp.OffsetTime
         if (bodyContent.isEmpty()) {
             return null
         }
+        if (T::class.java is File) {
+            // return tempfile
+            val f = createTempFile()
+            f.deleteOnExit()
+            val out = BufferedWriter(FileWriter(f))
+            out.write(bodyContent)
+            out.close()
+            return f as T
+        }
         return when(mediaType) {
             JsonMediaType -> {{#moshi}}Serializer.moshi.adapter(T::class.java).fromJson(bodyContent){{/moshi}}{{#gson}}Serializer.gson.fromJson(bodyContent, T::class.java){{/gson}}{{#jackson}}Serializer.jacksonObjectMapper.readValue(bodyContent, T::class.java){{/jackson}}
             else ->  throw UnsupportedOperationException("responseBody currently only supports JSON body.")
